fix spacing of hooks after putget to make suraci happy
[#97784020]

--- a/assets/css/modules.less
+++ b/assets/css/modules.less
@@ -43,15 +43,23 @@
   opacity: 0.8;
 }
 
+.seq.seq-dependent-get{
+  margin-bottom: 0px;
+}
+
+
 .hook-success{
+  margin-left: -1px;
   border-left: 1px solid @base0B;
 }
 
 .hook-ensure{
+  margin-left: -1px;
   border-left: 1px solid @base0E;
 }
 
 .hook-failure{
+  margin-left: -1px;
   border-left: 1px solid @base08;
 }
 
